Source/WebKit2/UIProcess/Network/NetworkProcessProxy.h
@@ -82,7 +82,6 @@ private:
     void connectionWillOpen(IPC::Connection&) override;
     void processWillShutDown(IPC::Connection&) override;
 
-    void platformGetLaunchOptions(ProcessLauncher::LaunchOptions&);
     void networkProcessCrashedOrFailedToLaunch();
 
     // ProcessThrottlerClient
